--- a/trunk/DescriptionExtractor/DescriptionExtractor.csproj
+++ b/trunk/DescriptionExtractor/DescriptionExtractor.csproj
@@ -48,6 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FourierDesc.cs" />
     <Compile Include="MainWindow.cs">
       <SubType>Form</SubType>
     </Compile>
