--- a/trunk/DescriptionExtractor/DescriptionExtractor.csproj
+++ b/trunk/DescriptionExtractor/DescriptionExtractor.csproj
@@ -48,6 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FeatureVector.cs" />
     <Compile Include="FourierDesc.cs" />
     <Compile Include="MainWindow.cs">
       <SubType>Form</SubType>
@@ -79,6 +80,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="ZernikeDesc.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
