+ZernikeDesc +Polynomial +FeatureVector Speedup

--- a/DescriptionExtractor/DescriptionExtractor.csproj
+++ b/DescriptionExtractor/DescriptionExtractor.csproj
@@ -48,6 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Complex.cs" />
     <Compile Include="FeatureVector.cs" />
     <Compile Include="FourierDesc.cs" />
     <Compile Include="MainWindow.cs">
@@ -56,6 +57,8 @@
     <Compile Include="MainWindow.Designer.cs">
       <DependentUpon>MainWindow.cs</DependentUpon>
     </Compile>
+    <Compile Include="Pair.cs" />
+    <Compile Include="Polynomial.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="MainWindow.resx">
