--- a/trunk/DescriptionExtractor/DescriptionExtractor.csproj
+++ b/trunk/DescriptionExtractor/DescriptionExtractor.csproj
@@ -55,6 +55,7 @@
     <Compile Include="FastHartleyTransform.cs" />
     <Compile Include="FeatureVector.cs" />
     <Compile Include="FourierDesc.cs" />
+    <Compile Include="Graph.cs" />
     <Compile Include="MainWindow.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -78,6 +79,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="app.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
