--- a/DescriptionExtractor/DescriptionExtractor.csproj
+++ b/DescriptionExtractor/DescriptionExtractor.csproj
@@ -48,12 +48,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ArrayMath.cs" />
-    <Compile Include="ChirpFFT.cs" />
     <Compile Include="Complex.cs" />
-    <Compile Include="Complex2.cs" />
-    <Compile Include="FastHartleyTransform.cs" />
     <Compile Include="FeatureVector.cs" />
+    <Compile Include="Fourier.cs" />
     <Compile Include="FourierDesc.cs" />
     <Compile Include="Graph.cs" />
     <Compile Include="MainWindow.cs">
