--- a/trunk/DescriptionExtractor/DescriptionExtractor.csproj
+++ b/trunk/DescriptionExtractor/DescriptionExtractor.csproj
@@ -49,6 +49,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Complex.cs" />
+    <Compile Include="DirectoryReader.cs" />
     <Compile Include="FeatureVector.cs" />
     <Compile Include="Fourier.cs" />
     <Compile Include="FourierDesc.cs" />
