--- a/Lightfieldretrieval/LightfieldRenderer.csproj
+++ b/Lightfieldretrieval/LightfieldRenderer.csproj
@@ -83,6 +83,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BaseReader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
